# mcp

./: README.md
tutorials/dlai/: README.md  pyproject.toml
tutorials/dlai/L3/: L3.ipynb
tutorials/dlai/L4/mcp_project/: pyproject.toml
